FIXED Mobile and Tablet CSS Issues
Issues interacting with Mobile/Tablet nav, slideshow, and contact form were being disabled due to h1#typewriter. This ID was covering entire page which was preventing users to have ability to click on the elements listed above. Will need to make  a few changes to realign elements. Don't want to lose these fixes!

--- a/portfolio/css/main.css
+++ b/portfolio/css/main.css
@@ -148,6 +148,13 @@ a.active {
     height: auto;
 }
 
+h1#typewriter{
+    width:48%;
+    height: 1em;
+    text-align: center;
+    margin-left: 25%;
+}
+
 .banner img{
     position: relative;
     width: 100%;
